# coordinates-converter-google-earth

./: .env.example  lat-long-converter.ipynb  main.ipynb  pyproject.toml  xyz-for-progresivas.ipynb  xyz-from-txt.ipynb
data/: coordinates.txt  progresivas.xlsx  pruebas.kml  utm.kml
output/: joined_data.json  joined_data.xlsx  progresivas_data.xlsx
utils/: elevations-google.ipynb  latlong-to-utm.ipynb
