[tool.poetry]
name = "coordenadas"
version = "0.1.0"
description = "un proyecto para extraer coordenadas y escribirlas en un csv"
authors = ["eder3232 <eldebar.dk@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "^1.26.1"
pandas = "^2.1.3"
utm = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
