[tool.poetry]
name = "coordenadas"
version = "0.1.0"
description = "un proyecto para extraer coordenadas y escribirlas en un csv"
authors = ["eder3232 <eldebar.dk@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "^1.26.1"
pandas = "^2.1.3"
utm = "^0.7.0"
responses = "^0.24.0"
googlemaps = "^4.10.0"
geopandas = "^0.14.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
